--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/jekyll-build-pages@v1
         with:
           source: ./
-          destination: ./site
+          destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
 
