--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -37,7 +37,13 @@ plugins:
 collections:
   pages:
     output: false
-    
+
+include:
+ - _pages
+ - _includes
+ - _plugins
+ - _posts
+ - _layouts
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
