--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -35,11 +35,11 @@ plugins:
   - jekyll-feed
 
 include:
-  - _pages
-  - _includes
-  - _plugins
-  - _posts
-  - _layouts
+  - _pages/
+  - _includes/
+  - _plugins/
+  - _posts/
+  - _layouts/
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
