update to pairwise comparison

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -34,6 +34,9 @@ theme: minima
 markdown: kramdown
 plugins:
   - jekyll-feed
+  - likert
+  - text_input
+  - multiple_choise
 
 collections:
   pages:
