--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -40,6 +40,13 @@ collections:
   pages:
     output: false
 
+defaults:
+  -
+    scope:
+      path: "" # an empty string here means all files in the project
+    values:
+      layout: "default"
+      
 include:
   - _pages/
   - _includes/
