add new content

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -47,6 +47,24 @@ defaults:
     values:
       layout: "default"
       
+
+input_types:
+  - text
+  - textarea
+  - email
+  - date
+  - checkbox
+  - radio
+  - number
+  - submit
+  - recaptcha
+
+form_engines:
+  - cloudcannon
+  - formspree
+  - formbucket
+  - netlify
+
 include:
   - _pages/
   - _includes/
