--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -66,12 +66,12 @@ form_engines:
   - netlify
 
 include:
-  - _data/
-  - _pages/
-  - _includes/
-  - _plugins/
-  - _posts/
-  - _layouts/
+  - _data/*
+  - _pages/*
+  - _includes/*
+  - _plugins/*
+  - _posts/*
+  - _layouts/*
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
